@@ -10,7 +10,10 @@ plugins {
     id 'uk.gov.hmcts.java' version '0.12.2'
     id 'io.freefair.lombok' version '5.3.0'
     id 'org.flywaydb.flyway' version '8.2.2'
+    id "info.solidsoft.pitest" version '1.7.4'
 }
+
+apply plugin: "info.solidsoft.pitest"
 
 group = 'uk.gov.hmcts.reform'
 version = '0.0.1'
@@ -73,6 +76,12 @@ task integration(type: Test) {
     mustRunAfter test
 }
 
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 check.dependsOn integration
 
 pmd {
@@ -103,6 +112,8 @@ sonarqube {
         property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
         property "sonar.coverage.exclusions", "**/ccd/ApplicationBootstrap.java"
         property "sonar.exclusions", "**/parameter/*.java,**/config/*.java,**/dao/*.java,**/util/DefaultSnooper.java"
+        property "sonar.pitest.mode", "reuseReport"
+        property "sonar.pitest.reportsDirectory", "build/reports/pitest"
     }
 }
 
@@ -153,6 +164,37 @@ repositories {
     }
 }
 
+pitest {
+    pitestVersion.set('1.7.4')
+    junit5PluginVersion.set('0.15')
+    targetClasses = ['uk.gov.hmcts.reform.*']
+    excludedClasses = [
+            'uk.gov.hmcts.reform.ccd.madeup.*'
+    ]
+    threads = 10
+    enableDefaultIncrementalAnalysis = true
+    outputFormats = ['XML', 'HTML']
+    timestampedReports = false
+    mutationThreshold = 50
+    timeoutConstInMillis = 30000
+    mutators.set([
+            'CONDITIONALS_BOUNDARY',
+            'INCREMENTS',
+            'INVERT_NEGS',
+            'MATH',
+            'NEGATE_CONDITIONALS',
+            'VOID_METHOD_CALLS',
+            'EMPTY_RETURNS',
+            'FALSE_RETURNS',
+            'NULL_RETURNS',
+            'PRIMITIVE_RETURNS',
+            'TRUE_RETURNS',
+            'REMOVE_CONDITIONALS'
+    ])
+}
+
+project.tasks['pitest'].group = "Verification"
+
 def versions = [
      junit               : '5.7.2',
      junitPlatform       : '1.7.2',
@@ -164,6 +206,9 @@ def versions = [
      s2sClient           : '4.0.3',
      commonsIo           : '2.7',
      wiremock            : '2.21.0',
+     gradlePitest      : '1.6.0',
+     pitest            : '1.6.3',
+     sonarPitest       : '0.5',
      springFramework     : '5.3.18',
      springBoot          : springBoot.class.package.implementationVersion
 ]
@@ -221,7 +266,7 @@ dependencies {
     implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.2.10'
 
     implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.5.7.Final'
-    runtime group: 'org.postgresql', name: 'postgresql', version: '42.2.23'
+    runtime group: 'org.postgresql', name: 'postgresql', version: '42.3.3'
 
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
     testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
@@ -242,6 +287,11 @@ dependencies {
     testImplementation group: 'com.github.tomakehurst', name: 'wiremock-jre8-standalone', version: versions.wiremock
 
     testImplementation group: 'com.pivovarit', name: 'throwing-function', version: '1.5.1'
+
+    testCompile group: 'org.pitest', name: 'pitest', version: versions.pitest
+    testCompile group: 'info.solidsoft.gradle.pitest', name: 'gradle-pitest-plugin', version: versions.gradlePitest
+    testCompile 'org.codehaus.sonar-plugins:sonar-pitest-plugin:0.5'
+    testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
 
     integrationTestImplementation sourceSets.main.runtimeClasspath
     integrationTestImplementation sourceSets.test.runtimeClasspath
